--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ flake8-variables-names==0.0.5
 pep8-naming==0.13.2
 psycopg==3.1.12
 psycopg-binary==3.1.12
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
